# kv-server

./: Cargo.toml  README.md  abi.proto  build.rs
benches/: pubsub.rs
config/: config.yml
examples/: bytes.rs  clap.rs  client.rs  codec.rs  eof.rs  rustyline.rs  server.rs
src/: cli.rs  client.rs  config.rs  error.rs  lib.rs  server.rs
src/commandline/: command.rs  mod.rs
src/network/: frame.rs  mod.rs  multiplex.rs  stream.rs  stream_result.rs
src/pb/: abi.rs  mod.rs
src/service/: command_service.rs  mod.rs  topic.rs  topic_service.rs
src/storage/: memory.rs  mod.rs  sleddb.rs
